tests/single_instruction_translation_validation/mcsema/register-variants-samereg/phaddsw_xmm_xmm/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:226:13: error: use of undefined value '@my.lifetime.end'
  call void @my.lifetime.end(i64 16, i8* nonnull %24)
            ^
0.01user 0.04system 0:00.16elapsed 32%CPU (0avgtext+0avgdata 27572maxresident)k
0inputs+16outputs (0major+3283minor)pagefaults 0swaps
